# github-project-sync

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-and-push.yml  deploy.yml  publish-ghcr.yml  test-build.yml
.jean-ci/: coolify.yml
src/: main.rs
